--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pandas
 numpy
 nltk
 spacy
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz
 pysrt
 textstat
 scikit-learn
