--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-numpy
-pandas
-nltk
-spacy
-pysrt
-textstat
-scikit-learn
-catboost
+pandas==1.3.2
+numpy==1.21.2
+nltk==3.6.2
+spacy==3.1.2
+pysrt==1.1.2
+# 'datetime' is part of the Python standard library and does not need to be installed separately
+textstat==0.7.1
+regex==2021.8.28
+scikit-learn==0.24.2
+catboost==0.26.1
+streamlit==0.88.0
+gensim==4.1.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
