--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas==1.3.2
 numpy==1.21.2
 nltk==3.6.2
-spacy==3.1.2
+spacy
 pysrt==1.1.2
 # 'datetime' is part of the Python standard library and does not need to be installed separately
 textstat==0.7.1
