--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ textstat==0.7.1
 regex==2021.8.28
 scikit-learn==0.24.2
 catboost==0.26.1
-streamlit==0.88.0
+streamlit
 gensim==4.1.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
