--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ regex==2021.8.28
 scikit-learn==0.24.2
 catboost==0.26.1
 streamlit
-gensim==4.1.2
+gensim.models.doc2vec
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
