--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-nltk==3.6.2
+nltk
 spacy
-pysrt==1.1.2
-click==8.0.3
-textstat==0.7.1
-regex==2021.8.28
-scikit-learn==0.24.2
-catboost==0.26.1
+pysrt
+textstat
+scikit-learn
+catboost
+tensorflow
+tensorflow_hub
+tensorflow_text
+torch
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
