--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-nltk
-spacy
-pysrt
-textstat
-scikit-learn
-catboost
-tensorflow
-tensorflow_hub
-tensorflow_text
-torch
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
+spacy==3.1.3
+pandas==1.3.4
+numpy==1.21.2
+pysrt==1.1.2
+nltk==3.6.3
+catboost==1.0.0
+gensim==4.1.2
+scikit-learn==1.0.1
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz
