--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ gensim==4.1.2
 scikit-learn==1.0.1
 textstat==0.7.2
 thinc==8.0.10
-spacy<4.0.0
+spacy>3,<4.0.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
