--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ catboost==1.0.0
 gensim==4.1.2
 scikit-learn==1.0.1
 textstat==0.7.2
+click==7.1.2
 spacy==3.0.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
