--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ gensim==4.1.2
 scikit-learn
 textstat
 click
-spacy==3.0.0
+spacy
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
